# WinMsvcLibfuzzer

./: .gitignore  README.md
examples/: README.md
examples/easy/: CMakeLists.txt  README.md  fuzz.cpp  target.cpp  target.h
examples/nlohmann_json/: CMakeLists.txt  README.md  fuzz_json.cpp
examples/rapidxml-1.13/: CMakeLists.txt  README.md  fuzz_rapidxml.cpp
examples/tinyxml2/: CMakeLists.txt  README.md  fuzz_tinyxml2.cpp
fuzzer_lib/win32/: clang_rt.asan_cxx-i386.lib  clang_rt.asan_dll_thunk-i386.lib  libsancov.lib
fuzzer_lib/x64/: clang_rt.asan_cxx-x86_64.lib  clang_rt.asan_dll_thunk-x86_64.lib  libsancov.lib
src/: CMakeLists.txt  FuzzerBuiltins.h  FuzzerBuiltinsMsvc.h  FuzzerCommand.h  FuzzerCorpus.h  FuzzerCrossOver.cpp  FuzzerDataFlowTrace.cpp  FuzzerDataFlowTrace.h  FuzzerDefs.h  FuzzerDictionary.h  FuzzerDriver.cpp  FuzzerExtFunctions.def  FuzzerExtFunctions.h  FuzzerExtFunctionsDlsym.cpp  FuzzerExtFunctionsWeak.cpp  FuzzerExtFunctionsWindows.cpp  FuzzerExtraCounters.cpp  FuzzerFlags.def  FuzzerIO.cpp  FuzzerIO.h  FuzzerIOPosix.cpp  FuzzerIOWindows.cpp  FuzzerInterface.h  FuzzerInternal.h  FuzzerLoop.cpp  FuzzerMain.cpp  FuzzerMerge.cpp  FuzzerMerge.h  FuzzerMutate.cpp  FuzzerMutate.h  FuzzerOptions.h  FuzzerRandom.h  FuzzerSHA1.cpp  FuzzerSHA1.h  FuzzerShmem.h  FuzzerShmemFuchsia.cpp  FuzzerShmemPosix.cpp  FuzzerShmemWindows.cpp  FuzzerTracePC.cpp  FuzzerTracePC.h  (+9 more)
